fix: overflow

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -8,8 +8,6 @@
 
 @media screen and (max-width: 1440px) {
   .app {
-    margin: 0;
     max-width: 100%;
-    overflow: hidden;
   }
 }
